// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/terms_of_service/TermsOfService should match snapshot 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <div
    className="signup-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <span
        className="fa fa-chevron-left"
        title="Logout Icon"
      />
      <FormattedMessage
        id="web.header.logout"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container padding--less max-width--more"
    >
      <div>
        <h2>
          <FormattedMessage
            defaultMessage="Terms of Service"
            id="terms_of_service.title"
            values={Object {}}
          />
        </h2>
      </div>
      <div
        className="signup__markdown"
      />
      <div
        className="margin--extra"
      >
        <ButtonGroup
          block={false}
          bsClass="btn-group"
          justified={false}
          vertical={false}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="primary"
            disabled={false}
            id="acceptTerms"
            onClick={[Function]}
            type="submit"
          >
            <FormattedMessage
              defaultMessage="I Agree"
              id="terms_of_service.agreeButton"
              values={Object {}}
            />
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="link"
            disabled={false}
            id="rejectTerms"
            onClick={[Function]}
            type="reset"
          >
            <FormattedMessage
              defaultMessage="I Disagree"
              id="terms_of_service.disagreeButton"
              values={Object {}}
            />
          </Button>
        </ButtonGroup>
      </div>
      <div
        className="margin--extra"
      >
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="By choosing 'I Agree', you understand and agree to [Terms of Service]({TermsOfServiceLink}) and [Privacy Policy]({PrivacyPolicyLink}). If you do not agree, you cannot access {siteName}."
          id="terms_of_service.footnote"
          values={
            Object {
              "PrivacyPolicyLink": "https://about.mattermost.com/default-privacy-policy/",
              "TermsOfServiceLink": "https://about.mattermost.com/default-about/",
              "siteName": "Mattermost",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/terms_of_service/TermsOfService should match snapshot on loading 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/terms_of_service/TermsOfService should match snapshot, on accept terms 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <div
    className="signup-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <span
        className="fa fa-chevron-left"
        title="Logout Icon"
      />
      <FormattedMessage
        id="web.header.logout"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container padding--less max-width--more"
    >
      <div>
        <h2>
          <FormattedMessage
            defaultMessage="Terms of Service"
            id="terms_of_service.title"
            values={Object {}}
          />
        </h2>
      </div>
      <div
        className="signup__markdown"
      />
      <div
        className="margin--extra"
      >
        <ButtonGroup
          block={false}
          bsClass="btn-group"
          justified={false}
          vertical={false}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="primary"
            disabled={true}
            id="acceptTerms"
            onClick={[Function]}
            type="submit"
          >
            <span
              className="fa fa-refresh icon--rotate"
              title="Loading Icon"
            />
            <FormattedMessage
              defaultMessage="I Agree"
              id="terms_of_service.agreeButton"
              values={Object {}}
            />
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="link"
            disabled={true}
            id="rejectTerms"
            onClick={[Function]}
            type="reset"
          >
            <FormattedMessage
              defaultMessage="I Disagree"
              id="terms_of_service.disagreeButton"
              values={Object {}}
            />
          </Button>
        </ButtonGroup>
      </div>
      <div
        className="margin--extra"
      >
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="By choosing 'I Agree', you understand and agree to [Terms of Service]({TermsOfServiceLink}) and [Privacy Policy]({PrivacyPolicyLink}). If you do not agree, you cannot access {siteName}."
          id="terms_of_service.footnote"
          values={
            Object {
              "PrivacyPolicyLink": "https://about.mattermost.com/default-privacy-policy/",
              "TermsOfServiceLink": "https://about.mattermost.com/default-about/",
              "siteName": "Mattermost",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/terms_of_service/TermsOfService should match snapshot, on reject terms 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <div
    className="signup-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <span
        className="fa fa-chevron-left"
        title="Logout Icon"
      />
      <FormattedMessage
        id="web.header.logout"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container padding--less max-width--more"
    >
      <div>
        <h2>
          <FormattedMessage
            defaultMessage="Terms of Service"
            id="terms_of_service.title"
            values={Object {}}
          />
        </h2>
      </div>
      <div
        className="signup__markdown"
      />
      <div
        className="margin--extra"
      >
        <ButtonGroup
          block={false}
          bsClass="btn-group"
          justified={false}
          vertical={false}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="primary"
            disabled={true}
            id="acceptTerms"
            onClick={[Function]}
            type="submit"
          >
            <FormattedMessage
              defaultMessage="I Agree"
              id="terms_of_service.agreeButton"
              values={Object {}}
            />
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="link"
            disabled={true}
            id="rejectTerms"
            onClick={[Function]}
            type="reset"
          >
            <span
              className="fa fa-refresh icon--rotate"
              title="Loading Icon"
            />
            <FormattedMessage
              defaultMessage="I Disagree"
              id="terms_of_service.disagreeButton"
              values={Object {}}
            />
          </Button>
        </ButtonGroup>
      </div>
      <div
        className="margin--extra"
      >
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="By choosing 'I Agree', you understand and agree to [Terms of Service]({TermsOfServiceLink}) and [Privacy Policy]({PrivacyPolicyLink}). If you do not agree, you cannot access {siteName}."
          id="terms_of_service.footnote"
          values={
            Object {
              "PrivacyPolicyLink": "https://about.mattermost.com/default-privacy-policy/",
              "TermsOfServiceLink": "https://about.mattermost.com/default-about/",
              "siteName": "Mattermost",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
